--- a/posts/2016-06-14.md
+++ b/posts/2016-06-14.md
@@ -1,10 +1,14 @@
-# Statistical correlation considered harmful
+# Statistical inference considered harmful
 
 Today we'll talk about a very exciting paper:
 
 	Privacy in Pharmacogenetics: An End-to-End Case Study of Personalized Warfarin Dosing
 
 This paper appeared at [Usenix Security, 2014](https://www.usenix.org/system/files/conference/usenixsecurity14/sec14-paper-fredrikson-privacy.pdf), where it won the best paper award! Holy crap!
+
+The paper looks at challenges in dosing [Warfarin](https://en.wikipedia.org/wiki/Warfarin), an anticoagulant with a somewhat challenging dosing protocol. It can be hard to figure out how to get patients on the right track with dosage, and any help they can get by looking harder at the patient (or in this case, their genetic markers) could help. In particular, an accurate statistical model of correlation between certain genetic markers and the appropriate Warfarin dose could help tremendously.
+ 
+But, maybe if you look too hard, you accidentally reveal more information about the patients than you intended. This sounds like it could be a privacy problem, and differential privacy claims it can help here. The authors want to know!
 
 The paper claims two main contributions: 
 
@@ -62,7 +66,7 @@ Here is a different one:
 
 Let's distill it down to its essence:
 
-> "Statistical correlation considered harmful"
+> "Statistical inference considered harmful"
 
 Unfortunately, the deadline for Usenix Security 2016 has already passed.
 
@@ -82,25 +86,27 @@ In fact, their attack is often much *less* effective than differential privacy w
 
 The authors seem to be making the argument that the existence of accurate models are enough to launch a privacy attack, where their privacy attack involves you first revealing secret personal information to the attacker. I think they are barking up the wrong tree here. Their proposed remedy is "suppress science". 
 
-The paper does not appear to report much privacy risk in *participating in training* such a dosing model. I would stress that just because they don't find much privacy risk in participating in training doesn't mean there isn't any. Their results indicate much less risk than differential privacy guarantees, especially for large epsilon, which may just mean that they don't have a very powerful attack. There could easily be a paper next year indicating that the risk is actually closer to the differential privacy bound.
+The paper does report not much privacy risk in *participating in training* such a dosing model. I would stress that just because they don't find much privacy risk in participating in training doesn't mean there isn't any. Their results indicate much less risk than differential privacy guarantees, especially for large epsilon, which may just mean that they don't have a very powerful attack. There could easily be a paper next year indicating that the risk is actually closer to the differential privacy bound.
 
 ## Issue 2
 
 What about the "increased risks of stroke, bleeding events, and mortality"? It seems they correspond to a hypothetical treatment plan that takes several differentially private measurements as absolute truth, ignoring how *strong* or *weak* the indicator is for each patient. If you have a really strong signal that is a great reason to change someone's dosage, but if you get only a weak signal it is probably best to keep it at (or closer to) the baseline. They just treat all the signals as "very strong" and change dosages all over the place and some hypothetical people die.
 
-Let's look at their Figure 8, which evaluates varying privacy values epsilon (the x-axes) for four metrics for success in Warfarin dosing.
+Let's look at their Figure 8, which evaluates varying privacy values epsilon (the x-axes) for four metrics for success in Warfarin dosing, compared against always starting with 10mg (`Fixed 10mg`) and the non-privacy linear regression (`LR`).
 
 ![Figure 8](https://github.com/frankmcsherry/blog/blob/master/assets/warfarin/Figure8.png)
 
 This figure reveals that small epsilon pretty much kills people. And if you use their approach, it probably does. In fact, although they don't plot it, their approach probably kills the most people with epsilon = 0 measurements. The measurements would be entirely noise, no signal, and so they would basically be randomly dosing people.
 
-Imagine you are going in for your Warfarin dosing, and are told "often we use 10mg when we don't know any better, but we've just gotten this pile of literally worthless measurements and we are going to dose you based on them." I'm guessing you'd say "10mg please".
+Imagine you are going in for your Warfarin dosing, and are told "often we use 10mg when we don't know any better, but we've just gotten this pile of literally worthless measurements and we are going to dose you based on them." 
 
-The important feature here is that we know how valuable the measurements are. You know that with epsilon = 0 there is no value, and so they should not adjust your prior strategy of 10mg dosing. A similar correction is *supposed* to apply to Figure 8 too: rather than just use the results of noisy measurements, integrate them with your prior belief that 10mg might be fine, weighted by your confidence in the measurements. 
+I'm guessing you'd say "10mg please".
 
-If you do this properly (which might be hard; it's well-defined mathematically, but perhaps challenging computationally), the differential privacy curves in Figure 8a should start at the `Fixed 10mg dose` line and as you increase epsilon approach the `LR` line (the non-privacy linear regression). There is no reason to believe that the curves should approach `LR` quickly, though it probably wouldn't be any slower than they do now. The important difference is that everywhere in Figure 8a that DP is worse than `Fixed 10mg dose` it should be no worse (perhaps with some variation because randomness).
+The important feature here is that we know how valuable the measurements are. You know that with epsilon = 0 there is no value, and so you should not adjust your prior strategy of 10mg dosing. A similar correction is *supposed* to apply to Figure 8 too: rather than just use the results of noisy measurements, integrate them with your prior belief that 10mg might be fine, weighted by your confidence in the measurements. 
 
-Figures 8b, 8c, and 8d just seem to show that `LR` doesn't reduce the risk over `Fixed 10mg dose`, and if you corrected the DP approaches they shouldn't either. Now you have several techniques that don't improve over `Fixed 10mg dose`; that sound a bit like the Warfarin modelers still have some work to do.
+If you do this properly (which might be hard; it's well-defined mathematically, but often challenging computationally), the differential privacy curves in Figure 8a should start at the `Fixed 10mg` line and as you increase epsilon approach the `LR` line (the non-privacy linear regression). There is no reason to believe that the curves should approach `LR` quickly, though it probably wouldn't be any slower than they do now. The important difference is that everywhere in Figure 8a that DP is worse than `Fixed 10mg` it should be no worse (perhaps with some variation because randomness).
+
+Figures 8b, 8c, and 8d are a bit of a mystery to me. They seem to show that `LR` doesn't reduce the risk over `Fixed 10mg`, and if you corrected the differential privacy approaches they shouldn't either. Now you have several techniques that don't improve over `Fixed 10mg`. I'm not sure what that shows; it's not my figure.
 
 ### Conclusions
 
@@ -156,21 +162,21 @@ The quote is
 
 This is totally true, they didn't observe such a budget. But it's fine for so many reasons. 
 
-The first reason is that model inversion misdiagnoses the source of the privacy violation: sharing your Warfarin dosage, or having it snooped from you, is what discloses information about your genetic markers. Their correlation as observed among large populations of people who are not you is *not* the source of your privacy woes. Model inversion is a non-attack.
+The first reason is that model inversion misdiagnoses the source of the privacy violation: sharing your Warfarin dosage, or having it snooped from you, is what discloses information about your genetic markers. Their correlation as observed among large populations of people who are not you is *not* the source of your privacy woes. Model inversion is a non-attack; no one should care whether it is prevented or not.
 
 The second reason is that the risk introduced over fixed dosing was primarily due to ignoring the statistical information about the differentially private measurements. The confidence associated with the measurement is (or should be) an important part of determining by how much you depart from your baseline treatment. That didn't happen in these experiments. The observed increased risk over fixed dosing is there because the use of statistical data without statistical techniques introduced it. 
 
 	Differential privacy doesn't kill (hypothetical) people, these authors do. ;)
 
-### Homework for the Usenix Security crowd
+### An analogy for the Usenix Security crowd
 
-Try writing down an analogous version of the arguments in this paper, where you replace 
+Imagine you had to review this paper, where  
 
-* **stable Warfarin dosage** with **a hash of my password**
-* **genomic dosing model** with **a list of popular passwords**
+* **stable Warfarin dosage** is replaced with **a hash of my password**
+* **genomic dosing model** is replaced with **a list of popular passwords**
 
-Now write the analogue of model inversion, where the attacker of course is given the hash of my password, and may learn about commonly used passwords *but only if we let them*. Then, study how to suppress the accurate release of common passwords by adding noise somehow. Finally, conclude 
+Model inversion is replaced with "brute-force password attack", where the attacker of course is given the hash of a password, and may learn about commonly used passwords *but only if the authors let them*. The paper then studies how to suppress the accurate release of common passwords by adding noise somehow. Finally, it concludes 
 
 > "We did not observe a noise level that significantly prevents brute force password attacks, without seriously undermining password strength-checking dictionaries."
 
-Then put a picture of a dead body with a toe tag.
+What does your review of that paper look like?
