links to dd intro

--- a/posts/2016-06-21.md
+++ b/posts/2016-06-21.md
@@ -62,7 +62,7 @@ We will learn how to efficiently *query* Datalog computations in this post, but 
 
 ## Differential dataflow
 
-Of course, by now all of you are probably familiar with differential dataflow, but let's review some key concepts for folks who may have just gotten here. Differential dataflow does not seem to have a wikipedia page, so I am going to have to make all of this up. 
+Of course, by now all of you are probably familiar with differential dataflow, but let's review some key concepts for folks who may have just gotten here. There is also an introductory series that might be helpful ([part 1](https://github.com/frankmcsherry/blog/blob/master/posts/2015-09-29.md), [part 2](https://github.com/frankmcsherry/blog/blob/master/posts/2015-11-27.md)). Differential dataflow does not seem to have a wikipedia page, so I am going to have to make all of this up. 
 
 I'll use the running example of Datalog, with the corresponding concepts in differential dataflow called out.
 
