--- a/posts/2016-06-21.md
+++ b/posts/2016-06-21.md
@@ -5,7 +5,7 @@ In this post we will look at a recently re-popularized programming language, [Da
 1. Differential dataflow can easily express Datalog programs, which are mostly just `map`, `filter`, and `join` operators with one `iterate` wrapped around the whole thing.
 2. The absolute performance of Datalog computations can be as good or even faster using differential dataflow on my laptop as compared to current cluster-based research prototypes from the databases community.
 3. Differential dataflow enables interactive Datalog computations, both in the sense that 
-    1. the source relations can changed arbitrarily, and 
+    1. the source relations can changed arbitrarily with results automatically corrected, and 
     2. top-down queries can be performed without evaluating the entire computation.
 
 Most of this work started up while I was at ETH Zurich's Systems Group, working with John Liagouris and Zaheer Chothia. At the very end, I mention some more recent work with Semih Salihoglu and Khaled Ammar at Waterloo.
