--- a/posts/2016-06-21.md
+++ b/posts/2016-06-21.md
@@ -229,12 +229,13 @@ The size of the transitive closure is mostly related to the depth of the tree ti
 We've seen how to write transitive closure in differential dataflow up above, but let's write the "same generation" query in differential dataflow:
 
 ```rust
-parents.join_map(parents, |P,&X,&Y| (X,Y))
-       .iterate(|same_gen| {
+let initial = parents.join_map(parents, |P,&X,&Y| (X,Y));
+initial.iterate(|same_gen| {
 		   let parents = parents.enter(&same_gen.scope());
+		   let initial = initial.enter(&same_gen.scope())
 		   same_gen.join_map(parents, |A,&B,&X| (B,X))
 		           .join_map(parents, |B,&X,&Y| (X,Y))
-		           .concat(parents)
+		           .concat(initial)
 		           .distinct()
 })
 ```
