--- a/posts/2016-06-21.md
+++ b/posts/2016-06-21.md
@@ -232,7 +232,7 @@ We've seen how to write transitive closure in differential dataflow up above, bu
 let initial = parents.join_map(parents, |P,&X,&Y| (X,Y));
 initial.iterate(|same_gen| {
 		   let parents = parents.enter(&same_gen.scope());
-		   let initial = initial.enter(&same_gen.scope())
+		   let initial = initial.enter(&same_gen.scope());
 		   same_gen.join_map(parents, |A,&B,&X| (B,X))
 		           .join_map(parents, |B,&X,&Y| (X,Y))
 		           .concat(initial)
