--- a/posts/2016-06-21.md
+++ b/posts/2016-06-21.md
@@ -294,7 +294,7 @@ Let's update the numbers above, though I should stress that we aren't doing the 
 | sg (tree11) |        53s | 0.26s / 0.16s |       1,961,271,939 |
 | sg (tree17) |        DNF |   94s /   58s | 115,813,751,041,560 |
 
-Of course, we did this by writing a smarter program that didn't try to materialize a quadratic expansion of the input. A program you may not be able to write in Datalog, and which these systems may or may not be able to run. Also, a program that might explode if you give it dodgy data, and whose performance may vary wildly if you provide it with non-tree input. The point isn't meant to be that differential is universally faster, but that some degree of flexibility in your programming model can really help.
+Of course, we did this by writing a different program that didn't try to materialize a quadratic expansion of the input. A program you may not be able to write in Datalog, and which these systems may or may not be able to run. Also, a program that might explode if you give it dodgy data, and whose performance may vary wildly if you provide it with non-tree input. The point isn't meant to be that differential is universally faster, but that some degree of flexibility in your programming model can really help.
 
 ### Graph computation
 
