--- a/posts/2016-07-17.md
+++ b/posts/2016-07-17.md
@@ -296,7 +296,7 @@ This is pretty similar, except rather than send any edge data we have issued a q
 	reachable: ((2, 2), 1)
 	reachable: ((2, 4), 1)
 
-There is only one edge out of `2`, to node `4`, which we can see. Also, our reachability query indicates that we can read both of these nodes from `2`, which non-trivially tells us that we can't reach any *other* nodes, yet.
+There is only one edge out of `2`, to node `4`, which we can see. Also, our reachability query indicates that we can reach both of these nodes from `2`, which non-trivially tells us that we can't reach any *other* nodes, yet.
 
 Importantly, we could have submitted something to `query` and advanced it (and `edges`) to the next round, without advancing `roots`. Timely dataflow can see that the only inputs that lead to `query_probe` are `edges` and `query`, and as long as those two have been advanced and the intervening data processed, it can report completion. Both `query` and `roots` can proceed independently, and will produce outputs as long as `edges` keeps up with them.
 
