--- a/posts/2016-07-17.md
+++ b/posts/2016-07-17.md
@@ -350,7 +350,7 @@ while query_probe.lt(&edges.time()) || roots_probe.lt(&edges.time()) {
 }
 ```
 
-This transaction wants to add `(5,0)`, which would be awesome, but it needs both `(0,1)` and `(0,2)` to be present in the graph. The first edge is, but the second edge is not, so `aborts` gets a new transaction id, `4`, and the writes are not commited. I secretly put an `inspect` as part of `aborts` so that we could see:
+This transaction wants to add `(5,0)`, which would be awesome, but it needs both `(0,1)` and `(0,2)` to be present in the graph. The first edge is, but the second edge is not, so `aborts` gets a new transaction id, `4`, and the write is not commited. I secretly put an `inspect` as part of `aborts` so that we could see:
 
 	tid: 4	read failure: (0, 2)
 
@@ -506,7 +506,7 @@ It is plausible that if you get to batch 500, 4, or just 1 read together because
 
 ### Transactions
 
-Let's do some actual transactions now. I have no clue what a good workload is here, and I'm a bit lazy. So I just made something up. We are going to send in 1,000 batches of `batch` transactions, each of which pulls a read requirement and a write location at random from a fixed set of size `batch`. This should make a non-trivial constant fraction of the transactions risk conflict, and force our craaaaazy transaction resolver to do some work (maybe).
+Let's do some actual transactions now. I have no clue what a good workload is here, and I'm a bit lazy. So I just made something up. We are going to send in 1,000 batches of `batch` transactions, each of which pulls a read requirement and a write location at random from a fixed set of size `batch`. This should make a non-trivial constant fraction of the transactions risk conflict, and force our craaaaazy iterative transaction resolver to do some work (maybe).
 
 | batch size | batches |         time |               rate |
 |-----------:|--------:|-------------:|-------------------:|
