--- a/posts/2015-07-31.md
+++ b/posts/2015-07-31.md
@@ -30,7 +30,7 @@ Lets look at a trace of GraphX on one machine over its execution on the `uk_2007
 
 ![Cluster utilization over time, GraphX 10G](https://github.com/frankmcsherry/blog/blob/master/assets/timeseries/pagerank/graphx_uk_16x8_10g/caelum-401.png)
 
-This is a bit hard to read; let's zoom in to the GraphX plot a bit. We pick a 30 second range in the iteration phase (210-240s; [graphs for all machines]({{ site.url }}/assets/timeseries/pagerank/graphx_uk_16x8_10g_zoom/)):
+This is a bit hard to read; let's zoom in to the GraphX plot a bit. We pick a 30 second range in the iteration phase (210-240s; [graphs for all machines](https://github.com/frankmcsherry/blog/blob/master/assets/timeseries/pagerank/graphx_uk_16x8_10g_zoom/)):
 
 ![Cluster utilization over time, GraphX 10G, zoomed](https://github.com/frankmcsherry/blog/blob/master/assets/timeseries/pagerank/graphx_uk_16x8_10g_zoom/caelum-401.png)
 
