--- a/posts/2016-07-26.md
+++ b/posts/2016-07-26.md
@@ -119,21 +119,21 @@ There are two main problems that we are going to want to re-work bits of differe
 
 To give you a heads up, and to let you skip around, the problems (with links!) are:
 
-*	**[Problem 0: Data structures for high-resolution times]()**
+*	**[Problem 0: Data structures for high-resolution times](https://github.com/frankmcsherry/blog/blob/master/posts/2016-07-26.md#problem-0-data-structures-for-high-resolution-times)**
 	The data structure differential dataflow currently uses to store collection data isn't great for high resolution times, even ignoring the more subtle performance issues. It works, but it doesn't expect large numbers of times and should be reconsidered.
 
-*   **[Problem 1: Unbounded increase in latency]()**
+*   **[Problem 1: Unbounded increase in latency](https://github.com/frankmcsherry/blog/blob/master/posts/2016-07-26.md#problem-1-unbounded-increase-in-latency)**
 	As the computation proceeds, the latencies increase without bound. This is because we keep appending in state, and the amount that must be considered to evaluate the current configuration grows without bound.
 
-*   **[Problem 2: Poor scaling with small updates]()**
+*   **[Problem 2: Poor scaling with small updates](https://github.com/frankmcsherry/blog/blob/master/posts/2016-07-26.md#problem-2-poor-scaling-with-small-updates)**
 	As we increase the number of workers, we do not get increased throughput without also increasing the sizes of batches of input we process. Increases in performance come at the cost of more granular updates.
 
 There are some constraints that are currently in place, and we will go through them to remember what is hard and annoying about just typing these things in.
 
-*	**[Constraint 1: Compact representation in memory]()**
+*	**[Constraint 1: Compact representation in memory](https://github.com/frankmcsherry/blog/blob/master/posts/2016-07-26.md#constraint-1-compact-representation-in-memory)**
 	The representation of a trace should not be so large that I can't fit normal graphs in memory on my laptop. Ideally the memory footprint should be not much larger than required to write the data on disk.
 
-*   **[Constraint 2: Shared index structures between operators]()**
+*   **[Constraint 2: Shared index structures between operators](https://github.com/frankmcsherry/blog/blob/master/posts/2016-07-26.md#constraint-2-shared-index-structures-between-operators)**
 	Index structures are currently shared between operators, so that a collection only needs to be indexed and maintained once per computation, for each key on which it is indexed.
 
 ### Problem 0: Data structures for high-resolution times
