--- a/posts/2016-07-26.md
+++ b/posts/2016-07-26.md
@@ -2,7 +2,7 @@
 
 I'm going to take this post to try and outline what I think is an important direction for differential dataflow, and to explain how to start moving in this direction. I think I have a handle on most of the path, but talking things out and explaining them, with examples and data and such, makes me a lot more comfortable before just writing a lot of code.
 
-The main goal is to support "high resolution" updates to input streams. Right now, updates to differential dataflow come in batches, and get relatively decent scaling as long as the batches are not small. While you can cut the size of batches to improve resolution, workers no longer improve performance. 
+The main goal is to support "high resolution" updates to input streams. Right now, updates to differential dataflow come in batches, and get relatively decent scaling as long as the batches are not small. While you can cut the size of batches to improve resolution, increasing the number of workers no longer improve performance. 
 
 It would be *great*, and this write-up is meant to be a first step, to be able to have input updates timestamped with the nanosecond of their arrival and the corresponding output updates with the same resolution, while still maintaining the throughput you would expect for large batch updates.
 
@@ -164,7 +164,7 @@ Ideally, we would define an interface for the storage layer, so that operators c
 
 	The history of `data` is used by many operators to determine (i) the cumulative weight at any other `time`, (ii) which times are associated with a `key`, which drives when user-defined logic needs to be re-run.
 
-[Constraint #1]() makes life a little difficult for random access, navigation, and mutation, as these usually fight with compactness. Perhaps less obviously, [Constraint #2]() complicates in-place updating, because multiple readers may share read access to the same hunk of memory, and something needs to stay true about it. 
+[Constraint #1](https://github.com/frankmcsherry/blog/blob/master/posts/2016-07-26.md#constraint-1-compact-representation-in-memory) makes life a little difficult for random access, navigation, and mutation, as these usually fight with compactness. Perhaps less obviously, [Constraint #2](https://github.com/frankmcsherry/blog/blob/master/posts/2016-07-26.md#constraint-2-shared-index-structures-between-operators) complicates in-place updating, because multiple readers may share read access to the same hunk of memory, and something needs to stay true about it. 
 
 #### A proposal
 
@@ -218,7 +218,7 @@ The design has a few other applealing features: each of the bits of state are co
 
 3. The large unit of data means that sharing between operators is relatively low cost (we can wrap each layer in a `Rc` reference count).
 
-You might notice that this doesn't yet meet [Constraint #2](), the requirement that the memory size look something like what it would take to write the data down compactly. For example, if all times and deltas are identical (say `0` and `+1`, respectively), the `histories` field will hold a very large amount of identical `(0,1)` pairs. There are some remedies that I can think of, and will discuss them below, but for the moment too bad.
+You might notice that this doesn't yet meet [Constraint #2](https://github.com/frankmcsherry/blog/blob/master/posts/2016-07-26.md#constraint-2-shared-index-structures-between-operators), the requirement that the memory size look something like what it would take to write the data down compactly. For example, if all times and deltas are identical (say `0` and `+1`, respectively), the `histories` field will hold a very large amount of identical `(0,1)` pairs. There are some remedies that I can think of, and will discuss them below, but for the moment too bad.
 
 ### Problem 1: Unbounded increase in latency
 
@@ -583,7 +583,7 @@ At the moment, I don't have particularly great thoughts on choosing between thes
 
 ### Constraint 2: Shared index structures between operators
 
-Several computations re-use the same collection indexed the same way. For example, the "people you may know" query from the recent [differential dataflog post](), which looks like so:
+Several computations re-use the same collection indexed the same way. For example, the "people you may know" query from the recent [differential dataflog post](https://github.com/frankmcsherry/blog/blob/master/posts/2016-06-21.md), which looks like so:
 
 ```rust
 // symmetrize the graph, because they do that too.
