--- a/posts/2016-08-03.md
+++ b/posts/2016-08-03.md
@@ -6,7 +6,7 @@ In the spirit of "append only updates", this post will largely be append-only (m
 
 This series is going to start out intentionally pedantic and simple, to frame the problem in the simplest language and implementations. We will try and become smarter as we move along, but let's start with simple, and evaluate things as we go. Here is the planned roadmap:
 
-* [Part 0/x: Trait definitions; defining what we require.]()
+* [Part 0/x: Trait definitions; defining what we require.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-08-03.md#part-0-trait-definitions-defining-what-we-require)
 
 * Part 1/x: A very naïve implementation based on sorted lists.
 
