--- a/posts/2016-08-03.md
+++ b/posts/2016-08-03.md
@@ -1,6 +1,6 @@
 # Differential dataflow internals; a work in progress
 
-This post is really meant to be a series of posts about how to represent data managed in differential dataflow. As they are topically related and meant to build upon one another, I thought putting them in one place would help record and explain what I was thinking when implementing them.
+This post is really meant to be a series of posts about how to represent data managed in [differential dataflow](https://github.com/frankmcsherry/differential-dataflow). As they are topically related and meant to build upon one another, I thought putting them in one place would help record and explain what I was thinking when implementing them. They *may* also be helpful for folks thinking about building interesting things in Rust!
 
 In the spirit of "append only updates", this post will largely be append-only (modulo errors, edits). I'm also going to try and make the development process largely append-only as well: new implementations will be added to older ones, rather than replacing them, allowing us to keep track of where we were and how far we've come. This will probably break at various points, but that is the intent!
 
@@ -15,6 +15,8 @@ This series is going to start out intentionally pedantic and simple, to frame th
 * Part 3/x: Adding an index.
 
 * Part 4/x: ...
+
+I'd like to think I know exactly where this is going to end up (I have a plan), but for now let's just pretend I know the general direction, and will tell you each time we take a meaningful step.
 
 ## Part 0: Trait definitions; defining what we require.
 
